Added first project

--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
             <div>
                 <h3>On going projects</h3>
                 <div>
+                    <h1>Be sure to check out my
+                         <a href=" https://dkempen98.github.io/concert-finder/" target="blank"> First Group Project!</h1> </a>
                     </div>
                         <div>
                             <h1>
-                                Place holder
+                                
                             </h1>
                         </div>
        <section>
